--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,9 @@
 		}
 	],
 	"require": {
-		"php": "^5.3.3 || >=7.0",
-		"illuminate/database": "^6.0",
-		"illuminate/support": "^6.0"
+		"php": "^7.2.5",
+		"illuminate/database": "^7.0",
+		"illuminate/support": "^7.0"
 	},
 	"autoload": {
 		"classmap": [
